ya to La sent to sabhaprati

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -43,11 +43,13 @@
 
 \begin{entry}
 \word{aLimanadavaru}
+\src{va}
 \meaning{\arthanonum{duMbi (aLi)yaMte hUviniMda hUvige hArADuvavaru; asithxra manasisxnavaru ivaru sharaNara {parxkAra} yoVga sAdhanege yoVgayxralalx (va.pa.koV. 54):} \ullekha{kUDalasaMgamadeVvara Bakitx aLimanadavarige aLavaDadayAyx (savasaM. 1; basava. 668-167).}}
 \end{entry}
 
 \begin{entry}
 \word{aLivu}
+\src{va}
 \meaning{\arthanonum{liMgAMga sAmarasayxvanunx sAdhisi matetx huTaTxdavaru (va.pa.koV. 54):} \ullekha{aLivarige uLivu elilxyU ilalxveMdu tiLi, uLivarige aLivu elilxyU ilalxveMdu tiLi (savasaM. 8; moVLige. 1490-500).}}
 \end{entry}
 
@@ -88,8 +90,8 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \word{AkAshada pUvARsharxya}
 \src{va}
 \meaning{\artha{AkAshada modalina asitxtavx, -iravu. shiva hAgU Bakatxna naDuvina BinanxBAvavu Bakatxnu dhAyxnasithxtiyalilx mADuva OMkAra maMtarxdiMda nivAraNeyAguvudu (viV.pA.koV. 60):}
-\ullekha{AkAshada pUvARsharxya maMtarxdiMda hoVhudu (savasaM. 3; cenanxba. 47-15).}}
-\newmeaning{\artha{paMcaBUtagaLalolxMdAda AkAshatatatxvXkekx shabadxveV muKayx
+\ullekha{AkAshada pUvARsharxya maMtarxdiMda hoVhudu (savasaM. 3; cenanxba. 47-15).}
+\artha{paMcaBUtagaLalolxMdAda AkAshatatatxvXkekx shabadxveV muKayx
  guNa. namamx deVhadalilx AkAshatatatxvXvu iruvudariMda {namage}
  sumadhura shabadx keVLisikoLaLxbeVku, kakaRsha shabadxvanunx
  keVLisikoLaLxbAradu eMba sAvxBAvika Ase irutatxde. Adare
@@ -122,13 +124,13 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \begin{entry}
 \word{Adiyanaruhida anAdiya toVridavanu}
 \src{va}
-\meaning{\arthanonum{idu guruvige anavxyavAguva pada. guruvu AdiyuLaLx iSaTxliMgavanunx koTuTx, adara savxrUpavanUnx mahatavxvanUnx, agatayxvanUnx kuritu shiSayxnige boVdhisutAtxne; alalxde inUnx muMde, shiSayxna sAdhane muMduvaredaMtelalx avanige shivayoVgada {mUlaka} anAdi parashivananUnx toVrisikoDutAtxne. {boVdhisi}, toVrisada guru guruvalalx (va.pa.koV. 717):} \ullekha{Adiyanaruhida, anAdiya toVrida, ihava keDisida, parava nilisida, Ganava toVrida... muMdaNa gatiya saMdeVhava biDisida (savasaM. 1; basava. 1042-280).}}
+\meaning{\arthanonum{idu guruvige anavxyavAguva pada. guruvu AdiyuLaLx iSaTxliMgavanunx koTuTx, adara savxrUpavanUnx mahatavxvanUnx, agatayxvanUnx kuritu shiSayxnige boVdhisutAtxne; alalxde inUnx muMde, shiSayxna sAdhane muMduvaredaMtelalx avanige shivayoVgada {mUlaka} anAdi parashivananUnx toVrisikoDutAtxne. {boVdhisi}, toVrisada guru guruvalalx (va.pa.koV. 71):} \ullekha{Adiyanaruhida, anAdiya toVrida, ihava keDisida, parava nilisida, Ganava toVrida... muMdaNa gatiya saMdeVhava biDisida (savasaM. 1; basava. 1042-280).}}
 \end{entry}
 
 \begin{entry}
 \word{AnaMdasuKapariNAmi}
 \src{va}
-\meaning{\arthanonum{sharaNasathxlada sAdhakanu tananx sujAcnxna eMba hasatxdalilx parxsAdaliMgavanunx kaMDu AnaMdaveMba Bakitxyanunx AcarisuvAga avanige AnaMdaveMba suKa pariNamisutatxde. alalxde, avanige tananx sadABxva eMba hasatxdalilx muMdina sathxlada mahAliMgavu goVcarisutatxde:}
+\meaning{\arthanonum{sharaNasathxlada sAdhakanu tananx sujAcnxna eMba hasatxdalilx parxsAdaliMgavanunx kaMDu AnaMdaveMba Bakitxyanunx AcarisuvAga avanige AnaMdaveMba suKa pariNamisutatxde. alalxde, avanige tananx sadABxva eMba hasatxdalilx muMdina sathxlada mahAliMgavu goVcarisutatxde (va.pa.koV. 1-74):}
 \ullekha{AnaMdasuKapariNAmiyAgi muMde noVDutatx suLiyutidaR mahAliMgavenanx sadABxvahasatxdalilx (savasaM. 12; deVshikeVM. 455-138).}}
 \newmeaning{\ni{AnaMdasayx suKaM anaMdasuKaM, tasayx AnaMdasayx pariNAmaH - AnaMdasuKapariNAmaH}}
 %\newmeaning{\ni{AnaMda suKa pariNAmaH asayx asitxVta AnaMda suKa pariNAma}}
@@ -147,7 +149,7 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 
 \begin{entry}
 \word{iceCx}
-\src{va}
+%\src{va}
 \meaning{\arthanonum{= icACxshakitx:}
 \ullekha{AdishakitxviDidADuvarelalxru jaMgamavalalx, anAdishakitxviDidADuvarelalxru jAcnxnigaLalalx, Adi anAdiyeMbiV eraDa BeVdisi dAMTi, icACxshakitxya iceCxya maredu, kirxyAshakitxya BAvava biTuTx, jAcnxnashakitxya ThAvavanolalxde, tAnu tAnAdavaMge EnU idirilAlx eMdanaMbiga cwDayayx (savasaM. 6; aMbiga. 51-20); gaganavA vAyuvaginxyapupxM paqthivxyeYdiceCx (viVsheYpu 7-100-14).}}
 \newmeaning{\ni{ESaNaM - icACx}}
@@ -1225,7 +1227,7 @@ eMbudu I mAtina athaR (va.pa.koV. 315):}
 %%%Sa
 \begin{entry}
 \word{SaDivxkAragaLanunx keDisuvudu}
-\meaning{\arthanonum{SaDaBxvavikAragaLU saha AdhAyxtimxka jiVvanada veYrigaLeV. avugaLa horatu mukitx sAdhayxvilalx. vacanakAraru avugaLanunx keDisuva upAyavanunx hiVge tiLisidAdxre: nAnu savxtaMtarx asitxtavxvanunx paDedidedxVne eMdu tiLiyade nAnu guruvina kaqpAgaBaRdalilxdedxVneMdu tiLidare, `asitx' eMba vikAra keDutatxde. nAnu mAyeya pariNAmadiMda huTiTxdedxVne eMdu BAvisade, nAnu gurukarasaMjAta eMdu BAvisidare, `\hbox{jAyateV}' eMba vikAra keDutatxde. guruvu anugarxhisida sadABxvajAta liMgavanunx aMgadalilx dharisuva mUlaka taqpitxyanunx saMpAdisi, adariMda `vipariNamateV' eMba vikAravanunx keDisabahudu. guruvu toVrisikoTaTx AcAra matutx jAcnxnamAgaRdalilx naDedu AdhAyxtamxdalilx beLeyuva mUlaka `vivadhaRte' eMba vikAravanunx suDabahudu. deVheVMdirxyAdigaLelalx nananxvalalx, parashivanavu eMdu elalxvanUnx parashivanige apiRsuva mUlaka `apakiSxVyateV' eMba vikAravanunx keDisabahudu. maNiNxnalilx liVyavAguva badalu liMgAMga aikayxda mUlaka liMgadalilx liVyavAdare, vinashayxti eMba vikAravanunx keDisabahudu (noVDi. SaDABxva vikAra) (va.pa.koV. 377); shirxVruguvina kaqpAgaBaRda madhayxdalilxdaRva nAnahudeMdaradAgade asitix Ekate vikAra keTiTxtutx asitx jAyateV vipariNamateV vivadhaRteV apeVkiSxVyateV vinashayxti eMba SaDABxva vikAraMgaLu keDuvudakekx vivaraveMteMdaDe (savasaM. 11; savxtaMtarx. 911-455).}}
+\meaning{\arthanonum{SaDaBxvavikAragaLU saha AdhAyxtimxka jiVvanada veYrigaLeV. avugaLa horatu mukitx sAdhayxvilalx. vacanakAraru avugaLanunx keDisuva upAyavanunx hiVge tiLisidAdxre: nAnu savxtaMtarx asitxtavxvanunx paDedidedxVne eMdu tiLiyade nAnu guruvina kaqpAgaBaRdalilxdedxVneMdu tiLidare, `asitx' eMba vikAra keDutatxde. nAnu mAyeya pariNAmadiMda huTiTxdedxVne eMdu BAvisade, nAnu gurukarasaMjAta eMdu BAvisidare, `\hbox{jAyateV}' eMba vikAra keDutatxde. guruvu anugarxhisida sadABxvajAta liMgavanunx aMgadalilx dharisuva mUlaka taqpitxyanunx saMpAdisi, adariMda `vipariNamateV' eMba vikAravanunx keDisabahudu. guruvu toVrisikoTaTx AcAra matutx jAcnxnamAgaRdalilx naDedu AdhAyxtamxdalilx beLeyuva mUlaka `vivadhaRte' eMba vikAravanunx suDabahudu. deVheVMdirxyAdigaLelalx nananxvalalx, parashivanavu eMdu elalxvanUnx parashivanige apiRsuva mUlaka `apakiSxVyateV' eMba vikAravanunx keDisabahudu. maNiNxnalilx liVyavAguva badalu liMgAMga aikayxda mUlaka liMgadalilx liVyavAdare, vinashayxti eMba vikAravanunx keDisabahudu (noVDi. SaDABxva vikAra) (va.pa.koV. 377); asitx jAyateV vipariNamateV vivadhaRteV apeVkiSxVyateV vinashayxti eMba SaDABxva vikAraMgaLu keDuvudakekx vivaraveMteMdaDe shirxVguruvina kaqpAgaBaRda madhayxdalilxdaRva nAnahudeMdaradAgave asitx EMba vikAra keTiTxtutx.  (savasaM. 11; savxtaMtarx. 911-455).}}
 \end{entry}
 
 
@@ -1244,7 +1246,7 @@ nitayxmiVshAnamaMterxVNa sAvxMgeV dhAyaRM parxyatanxtaH ||
 \medskip
 \pauthor{(caM. A., kirx. pA., 6. 29-30)}
 \smallskip
-\newmeaning{\arthanonum{baqhajAjxbAloVpaniSatitxna parxkAra, Basamxvanunx - tayArikeya vidhAnada AdhAradiMda anukalapx, upakalapx, upoVpakalapx matutx akalapx eMdu nAlukx vidhavAgi gurutisutAtxre. aginxhoVtarx virajAginxyiMda utApxditavAdadudx anukalapx. kADinalilx oNagida goVmaya\-vanunx saMgarxhisi, kalopxVkatxvidhiyiMda tayArisida Basamx upakalapx. kADinalilx oNagida goVmayavanunx saMgarxhisi, adanunx puDimADi goVmUtarxdoMdige uMDemADi kalopxVkatxvidhiyaMte tayArisidudx upoVpakalapx Basamx matutx shivAlayadalilxruva Basamxvu akalapx athavA shatakalapx enisutatxde.}}
+\newmeaning{\arthanonum{\qquad baqhajAjxbAloVpaniSatitxna parxkAra, Basamxvanunx - tayArikeya vidhAnada AdhAradiMda anukalapx, upakalapx, upoVpakalapx matutx akalapx eMdu nAlukx vidhavAgi gurutisutAtxre. aginxhoVtarx virajAginxyiMda utApxditavAdadudx anukalapx. kADinalilx oNagida goVmaya\-vanunx saMgarxhisi, kalopxVkatxvidhiyiMda tayArisida Basamx upakalapx. kADinalilx oNagida goVmayavanunx saMgarxhisi, adanunx puDimADi goVmUtarxdoMdige uMDemADi kalopxVkatxvidhiyaMte tayArisidudx upoVpakalapx Basamx matutx shivAlayadalilxruva Basamxvu akalapx athavA shatakalapx enisutatxde.}}
 \smallskip
 \begin{shl}
 atha catuviRdhaM Basamxkalapxmf | parxthamamanukalapxmf |\\[1pt]
@@ -1257,7 +1259,7 @@ kalopxVkatxvidhinA kalipxtaM upoVpakalapxmf | shivAlayasathxmf akalapxM shatakal
 \smallskip
 \pauthor{(baq. jA. u., 3. 36-38)}
 \smallskip
-\newmeaning{\arthanonum{tayArikeya karxmadiMda Basamxvu kalapx, anukalapx, upakalapx matutx akalapx eMdu nAlukx vidha. sadoyxVjAtamaMtarxdiMda hosadAda goVmayavAgutatxde (sagaNi) shAsotxrXVkatxvidhiyaMte tegedukoLaLxbeVku. vAmadeVvamaMtarxdiMda uMDemADi, tatupxruSamaMtarxdiMda oNagisi, aGoVramaMtarxdiMda beMkiyalilx suTuTx, IshAnamaMtarxvanunx heVLutAtx suTaTx Basamxda puDiyanunx bilavxpaterxyalilx iDabeVku. hiVge tayArisida Basamxvu kalapx enisutatxde. kADinalilx oNagida goVmayavanunx tegedukoMDu puDimADi suTiTxruva BasamxveV anukalapx. aMgaDi\-yalilxruva Basamxvanunx tegedukoMDu adanunx baTeTxyalilx soVsi, goVmUtarxdiMda uMDemADi pUvoRVkatx vidhiyaMte suTuTx tayArisida Basamxkekx upakalapx eMdu hesaru. anayxriMda tayArisida Basamxvu akalapx enisutatxde (idu \hbox{sidAdhxMta} shiKAmaNi riVtAyx).}}
+\newmeaning{\arthanonum{\qquad tayArikeya karxmadiMda Basamxvu kalapx, anukalapx, upakalapx matutx akalapx eMdu nAlukx vidha. sadoyxVjAtamaMtarxdiMda hosadAda goVmayavAgutatxde (sagaNi) shAsotxrXVkatxvidhiyaMte tegedukoLaLxbeVku. vAmadeVvamaMtarxdiMda uMDemADi, tatupxruSamaMtarxdiMda oNagisi, aGoVramaMtarxdiMda beMkiyalilx suTuTx, IshAnamaMtarxvanunx heVLutAtx suTaTx Basamxda puDiyanunx bilavxpaterxyalilx iDabeVku. hiVge tayArisida Basamxvu kalapx enisutatxde. kADinalilx oNagida goVmayavanunx tegedukoMDu puDimADi suTiTxruva BasamxveV anukalapx. aMgaDi\-yalilxruva Basamxvanunx tegedukoMDu adanunx baTeTxyalilx soVsi, goVmUtarxdiMda uMDemADi pUvoRVkatx vidhiyaMte suTuTx tayArisida Basamxkekx upakalapx eMdu hesaru. anayxriMda tayArisida Basamxvu akalapx enisutatxde (idu \hbox{sidAdhxMta} shiKAmaNi riVtAyx).}}
 \smallskip
 \begin{shl}
 BasomxVtApxdanamudidxSaTxM catudhAR taMtarxveVdiBiH |\\[1pt]
@@ -1280,7 +1282,7 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{saMdanaLidu nilulxvudu}
 \src{va}
-\meaning{\arthanonum{Atamxnu tananx shudadhxrUpadalilx parashivanoMdige aikayxvAdAga avaribabxra madhayxda saMdu ilalxvAgutatxde. alalxde, aMganu parashivanalelxV nilulxtAtxne. hAge saMdanaLidu shivanalilx nelasuvudeV Atamxna dheyxVya (va.pa.koV. 386) (9:209):}
+\meaning{\arthanonum{Atamxnu tananx shudadhxrUpadalilx parashivanoMdige aikayxvAdAga avaribabxra madhayxda saMdu ilalxvAgutatxde. alalxde, aMganu parashivanalelxV nilulxtAtxne. hAge saMdanaLidu shivanalilx nelasuvudeV Atamxna dheyxVya (va.pa.koV. 386):}
 \ullekha{madhura daMDa oraLige baMdu, maraLi beMdu, tirxguNadalilx hoMdi, kaDeyANeyAdaMte. oMdanoMdu kaMDu saMdanaLidu niMdudu, IshAnayxmUtiR malilxkAjuRnaliMgavu tAne (savasaM. 9; shivaleM. 209-75).}}
 \end{entry}
 
@@ -1295,10 +1297,9 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \src{va}
 \meaning{\arthanonum{manuSayxna deVhadalilx ELu vaNaRgaLidudx, avu bariya kaNuNxgaLige kANuvudilalx. Adare avu sAdhakanige kANisikoLuLxvuvu. vividha cakarxgaLu jAgarxtavAdAga vividha baNaNxgaLu kANisikoLuLxtatxve. \hbox{sAdhane} \hbox{inUnx} PalaparxdavAgade idAdxga avu mAnavana vataRneya meVle kelavu pariNAma mADutatxve. adara vivaragaLu hiVgive.}}
 \smallskip
-\newmeaning{\arthanonum{mUlAdhAradalilx parxdhAna aMsha paqthivxVtatatxvX, adaralilx kapila vaNaR\-vide. I vaNaRdiMdAgi manuSayxna deVhadalilx aLuku uMTAgutatxde. sAvxdhiSAThxna cakarxdalilx apupxvidudx, adaralilx niVlavaNaRvide. idariMdAgi deVha naDuguvudu. maNipUrakacakarxdalilx aginxtatatxvXvidudx, adaralilx mAMjiSaTx vaNaRvide. idara pariNAmavAgi nAvu kanasu kANutetxVve. anAhatacakarxdalilx vAyu aMsha parxdhAnavAgidudx, adaralilx (piVta) haLadi vaNaRvirutatxde. idara pariNAmavAgi deVhada oLagaDe otutx uMTAgu\-tatxde. vishudidhxcakarxdalilx AkAshatatatxvX parxdhAnavAgidudx, adaralilx kapupx vaNaRvide. idara pArxbalayxdiMdAgi namage goMdala uMTAgi, deVhavu tatatxrisutatxde. AjAcnxcakarxdalilx caMdarxnidudx, adaralilx shevxVtavaNaRvide. idariMdAgi namage ciMte uMTAgu\-tatxde. barxhamxraMdharxdalilx sUyaRnidudx, adaralilx gwraNaRvide. idariMdAgi deVhadalilx saMcalane uMTAgutatxde. sAdhakanu tananx sAdhaneyiMdAgi I pariNAmagaLanunx niyaMtirxsabeVkeMbudu I vacanada sUcayx upadeVsha (va.pa.koV. 394).}}
+\newmeaning{\arthanonum{\qquad mUlAdhAradalilx parxdhAna aMsha paqthivxVtatatxvX, adaralilx kapila vaNaR\-vide. I vaNaRdiMdAgi manuSayxna deVhadalilx aLuku uMTAgutatxde. sAvxdhiSAThxna cakarxdalilx apupxvidudx, adaralilx niVlavaNaRvide. idariMdAgi deVha naDuguvudu. maNipUrakacakarxdalilx aginxtatatxvXvidudx, adaralilx mAMjiSaTx vaNaRvide. idara pariNAmavAgi nAvu kanasu kANutetxVve. anAhatacakarxdalilx vAyu aMsha parxdhAnavAgidudx, adaralilx (piVta) haLadi vaNaRvirutatxde. idara pariNAmavAgi deVhada oLagaDe otutx uMTAgu\-tatxde. vishudidhxcakarxdalilx AkAshatatatxvX parxdhAnavAgidudx, adaralilx kapupx vaNaRvide. idara pArxbalayxdiMdAgi namage goMdala uMTAgi, deVhavu tatatxrisutatxde. AjAcnxcakarxdalilx caMdarxnidudx, adaralilx shevxVtavaNaRvide. idariMdAgi namage ciMte uMTAgu\-tatxde. barxhamxraMdharxdalilx sUyaRnidudx, adaralilx gwraNaRvide. idariMdAgi deVhadalilx saMcalane uMTAgutatxde. sAdhakanu tananx sAdhaneyiMdAgi I pariNAmagaLanunx niyaMtirxsabeVkeMbudu I vacanada sUcayx upadeVsha (va.pa.koV. 394).}}
 \smallskip
-\newmeaning{\arthanonum{kapilavaNaR niVlavaNaR mAMjiSaTxvaNaR piVta\-vaNaR kapupx\-vaNaR shevxVtavaNaR gwravaNaRveMba sapatxdhAtugaLu. ivakekx vivara:}
-\ullekha{kapilavaNaRda dhAtu paqthivx aMsha, deVha aLukutihudu. niVlavaNaRda dhAtu apupxvina aMsha deVhava [naDugutitxhudu]. mAMjiSaTxvaNaRda dhAtu aginx aMsha, deVha kanasa kANutihudu. piVtavaNaRda dhAtu vAyu aMsha, deVhavatatxra otutxtitxhudu. kapupx\-vaNaRda dhAtu AkAshada aMsha, etatxra tatatxrageDahutihudu. shevxVta\-vaNaRda dhAtu caMdarxna aMsha, deVha kaLavaLisutihudu. gwravaNaRda dhAtu sUyaRna aMsha, shariVra saMcalisutihudu. iMtiV sapatxdhAtugaLa savxsAthxnavaM mADi liMgAcaRneya mADalalxDe kUDala\-cenanxsaMgayayxnalilx sharaNanenisutihanu. (savasaM. 3; cenanxba. 1091-371).}}
+\newmeaning{\ullekha{kapilavaNaR niVlavaNaR mAMjiSaTxvaNaR piVta\-vaNaR kapupx\-vaNaR shevxVtavaNaR gwravaNaRveMba sapatxdhAtugaLu. ivakekx vivara: kapilavaNaRda dhAtu paqthivx aMsha, deVha aLukutihudu. niVlavaNaRda dhAtu apupxvina aMsha deVhava [naDugutitxhudu]. mAMjiSaTxvaNaRda dhAtu aginx aMsha, deVha kanasa kANutihudu. piVtavaNaRda dhAtu vAyu aMsha, deVhavatatxra otutxtitxhudu. kapupx\-vaNaRda dhAtu AkAshada aMsha, etatxra tatatxrageDahutihudu. shevxVta\-vaNaRda dhAtu caMdarxna aMsha, deVha kaLavaLisutihudu. gwravaNaRda dhAtu sUyaRna aMsha, shariVra saMcalisutihudu. iMtiV sapatxdhAtugaLa savxsAthxnavaM mADi liMgAcaRneya mADalalxDe kUDala\-cenanxsaMgayayxnalilx sharaNanenisutihanu. (savasaM. 3; cenanxba. 1091-371).}}
 \end{entry}
 
 \begin{entry}
@@ -1478,4 +1479,16 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \ullekha{jaMgamaliMgAMga sumanaleVpagArxhaka sharaNa mahAliMgavAda (savasaM. 3; cenanxba. 1412-504).}}
 \end{entry}
 
+%%ha
+\begin{entry}
+\word{huTuTxgeDuvudu}
+\src{va}
+\meaning{\arthanonum{matetx huTaTxdiruvudu. mukitx. liMgAMga sAmarasayx. adhAyxtamxdalilx parxgati sAdhisi, niSAkxma kamaR mADidavanigaSeTxV huTuTxgeVDu sAdhayx:}
+\ullekha{matetx pAdoVdakava niVreYdu dharisiyAnu huTuTxgeTeTxnu basavaNaNx nimamx karuNadiMda (savasaM. 4; sidadhxrA. 1019-293).}}
+\end{entry}
 
+\begin{entry}
+\word{hodadxda parxpaMcika}
+\meaning{\arthanonum{badalAgada parxpaMca. parxpaMcavu parxti kaSxNavU badalAgutitxdadxrU, adanunx hodadxda parxpaMcaveMdu kareyalu sidadhxrAmanige oMdu sapxSaTx kAraNavide: avanu A pada\-vanunx iMdirxyagoVcara parxpaMcakekx anavxyisade, adaroLage aMtasathxvAgiruva nitayxparatatatxvXkekx anavxyisutAtxne (va.pa.koV. 428):}
+\ullekha{I hodadxda parxpaMcikava nitayxda tatatxvXvanu madhayxmadalilx kaMDe kANA (savasaM. 4; sidadhxrA. 873-246).}}
+\end{entry}
