--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -20,15 +20,15 @@
 \hline
 \endfoot
 \endlastfoot
-aKaMDeV & aKaMDeVshavxra vacanagaLu & puTa, vacana\\
-anuBa & anuBavasAra & puTa, kiVtaRne, padayx\\
-apapxNaNx, samava & haDapada apapxNaNxna vacanagaLu & BAga, puTa, vacana\\
+aKaMDeV & aKaMDeVshavxra vacanagaLu &  vacana, puTa\\
+anuBa & anuBavasAra &  kiVtaRne, padayx, puTa\\
+apapxNaNx, samava & haDapada apapxNaNxna vacanagaLu &  vacana, puTa\\
 a\char'273\char'311mA '' & a\char'273\char'311vina mAritaMdegaLa vacanagaLu & \qquad '' '' ''\\
 urideV '' & uriliMgadeVvara vacana & \qquad '' '' ''\\
 uripe '' & uriliMgapedidxgaLa vacana & \qquad '' '' ''\\
 kananxni & kananxDa-kananxDa niGaMTu (kasApa) & BAga, puTa\\
 karaNa & karaNahasige & puTa, sAlu,\\
-keYvapa & keYvalayxpadadhxti & puTa, kiVtaRne, padayx\\
+keYvapa & keYvalayxpadadhxti &  kiVtaRne, padayx, puTa\\
 keYvasha & keYvalayx soVpAnanAmeYkoVtatxra shatasathxla & puTa, padayx\\
 gaNaBA & gaNaBASitaratanxmAle & puTa, sAlu\\
 cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
@@ -45,7 +45,7 @@ purAta & purAtanara tirxvidhasavxrUpa & puTa, padayx\\
 parxBuliV & parxBuliMgaliVle & saMdhi, padayx\\
 basaTiV & basavaNaNxnavara TiVkina vacanagaLu & BAga, puTa, vacana-TiVku\\
 basapu & basavapurANa & saMdhi, padayx\\
-basava. ka. & basavaNaNxnavara vacanagaLu (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
+basava. ka. & basavaNaNxnavara vacanagaLu (kanARTaka vishavxvidAyxlaya) & vacana, puTa\\
 maDimA. samava & maDivALamAcideVvara vacana & BAga, puTa, vacana\\
 maDivA '' & maDivALapapxna nijaliVlAmaqta vacana & \qquad '' '' ''\\
 mishArxpuR & mishArxpaRNa & puTa, sAlu\\
@@ -70,7 +70,7 @@ hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
 {\Large\bf viVrasheYva pAriBASika koVshadalilx udAharisuva garxMthagaLa saMkiSxpatx sUci}
 \end{center}
 
-{\renewcommand{\arraystretch}{1.13}
+{\renewcommand{\arraystretch}{1.18}
 \tabcolsep=3pt
 \begin{longtable}{rllll}
 \hline
@@ -85,123 +85,124 @@ hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
 \endfoot
 \hline
 \endlastfoot
-1. & aMgasoVM. samava & aMgasoVMkina liMgataMdegaLa vacana & aMgasoVMkina liMgataMde & kananxDa matutx saMsakxqqti\\[-2pt]
+1. & aMgasoVM. & aMgasoVMkina liMgataMdegaLa vacana & aMgasoVMkina liMgataMde & kananxDa matutx saMsakxqqti\\[2pt]
+   & \multicolumn{2}{l}{savasaM: saMKeyx; aMgasoVM; vacana saMKeyx; puTa saMKeyx} & &\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-2. & aMbiga. samava & aMbigara cwDayayxgaLa vacana & cwDayayx & kananxDa matutx saMsakxqqti\\[-2pt]
+2. & aMbiga.  & aMbigara cwDayayxgaLa vacana & cwDayayx & kananxDa matutx saMsakxqqti\\[-2pt]
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]  
-3. & akakxma. samava & akakxmahAdeVviya vacanagaLu & akakxmahAdeVvi & kananxDa matutx saMsakxqqti \\[-2pt]
+3. & akakxma.  & akakxmahAdeVviya vacanagaLu & akakxmahAdeVvi & kananxDa matutx saMsakxqqti \\[-2pt]
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-4. & akakxma. samava & akakxmamxna vacanagaLu & akakxmamx & kananxDa matutx saMsakxqqti\\[-2pt]
+4. & akakxma.  & akakxmamxna vacanagaLu & akakxmamx & kananxDa matutx saMsakxqqti\\[-2pt]
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-5. & aKaMDeV. samava & aKaMDeVshavxra vacanagaLu & SaNumxKasAvxmi & shirxV.ni.parx.savx.\ maqtuyxMjaya\\[-2pt]
+5. & aKaMDeV.  & aKaMDeVshavxra vacanagaLu & SaNumxKasAvxmi & shirxV.ni.parx.savx.\ maqtuyxMjaya\\[-2pt]
  & & & & mahAsAvxmigaLu, dhAravADa.\\[5pt]
-6. & anusA.\ samava & anuBavasAra &  nijaguNashivayoVgi & kananxDa matutx saMsakxqqti\\[-2pt]
+6. & anusA.\ & anuBavasAra &  nijaguNashivayoVgi & kananxDa matutx saMsakxqqti\\[-2pt]
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-7. & apapxNaNx. samava & haDapada apapxNaNxgaLa vacana & haDapada apapxNaNx & kananxDa matutx saMsakxqqti\\[-2pt]
+7. & apapxNaNx. & haDapada apapxNaNxgaLa vacana & haDapada apapxNaNx & kananxDa matutx saMsakxqqti\\[-2pt]
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-8. & amugi. samava & amugideVvayayxgaLa vacana & amugideVvayayx & kananxDa matutx saMsakxqqti\\
+8. & amugi. & amugideVvayayxgaLa vacana & amugideVvayayx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-9. & alalxma. ka. & alalxmaparxBudeVvara vacanagaLu & parxBudeVva & kananxDa adhayxyana piVTha, kanARTaka\\
+9. & alalxma. & alalxmaparxBudeVvara vacanagaLu & parxBudeVva & kananxDa adhayxyana piVTha, kanARTaka\\
   & & & & vishavxvidAyxlaya, dhAravADa.\\
-10. & alalxma. samava & alalxmaparxBudeVvara vacanasaMpuTa & parxBudeVva & kananxDa matutx saMsakxqqti\\
+10. & alalxma.  & alalxmaparxBudeVvara vacanasaMpuTa & parxBudeVva & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-11. & avareV. samava & avasarada reVkaNaNxgaLa vacana & avasarada reVkaNaNx & kananxDa matutx saMsakxqqti\\
+11. & avareV.  & avasarada reVkaNaNxgaLa vacana & avasarada reVkaNaNx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 12. & aSATxvi. & aSATxvaraNa vicAradapaRNa & esf. viVrapapxshAsitxrX & Tavanf mudarxNAlaya,\\
-   &                  &                                    &                         & beMgaLUru.\\[5pt]
-13. & a\char'273\char'311mA. samava & a\char'273\char'311vina mAritaMdegaLa vacana & a\char'273\char'311vina mAritaMde & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-14. & Adayayx. samava & AdayayxgaLa vacana & Adayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-15. & urideV. samava & uriliMgadeVvara vacana & uriliMgadeVvaru & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-16. & uripe. samava & uriliMgapedidxgaLa vacana & uriliMgapedidxgaLu & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-17. & EkAMrA. samava & EkAMtarAmitaMdegaLa vacana & EkAMtarAmitaMdegaLu & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-18. & EleVshavx. samava & EleVshavxra keVtayayxgaLa vacana & EleVshavxra keVtayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+   &                  &                                    &                         & beMgaLUru.\\[4pt]
+13. & arimA. & arivina mAritaMdegaLa vacana & a\char'273\char'311vina mAritaMde & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+14. & Adayayx.  & AdayayxgaLa vacana & Adayayx & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+15. & urideV.  & uriliMgadeVvara vacana & uriliMgadeVvaru & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+16. & uripe.  & uriliMgapedidxgaLa vacana & uriliMgapedidxgaLu & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+17. & EkAMrA.  & EkAMtarAmitaMdegaLa vacana & EkAMtarAmitaMdegaLu & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+18. & EleVshavx.  & EleVshavxra keVtayayxgaLa vacana & EleVshavxra keVtayayx & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
 19. & kaninx. & kananxDa sAhitayx pariSatitxna & EleVshavxra keVtayayx & kananxDa sAhitayx pariSatutx,\\
-   &                  &  kananxDa niGaMTu                  &                         & beMgaLUru.\\[5pt]
+   &                  &  kananxDa niGaMTu                  &                         & beMgaLUru.\\[4pt]
 20. & kaBAge. & muMbayi kanARTakada & veMkaTaraMgoVkaTiTx & gwnaRmeMTf seMTarxlf\\
-    & & gAyxJeTiyaru & & bukfDipoV, muMbayi.\\[5pt]
+    & & gAyxJeTiyaru & & bukfDipoV, muMbayi.\\[4pt]
 21. & karaNa (cananxbasavaNaNxnavara & karaNahasige & cananxbasavaNaNxnavaru & kananxDa adhayxyana piVTha, kanARTaka\\
     & vacanagaLu) & & & vishavxvidAyxlaya, dhAravADa.\\
-    & (kanARTaka vishavxvidAyxlaya) & & &\\[5pt]
-22. & kalalxyayx. samava & hAvinahALa kalalxyayxgaLa vacana & hAvinahALa kalalxyayx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+    & (kanARTaka vishavxvidAyxlaya) & & &\\[4pt]
+22. & kalalxyayx.  & hAvinahALa kalalxyayxgaLa vacana & hAvinahALa kalalxyayx & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
 23. & kavica. {\rm II} & kanARTaka kavicarite & rA. narasiMhAcArf & kananxDa sAhitayx pariSatutx,\\
     & & & & beMgaLUru.\\[5pt]
-24. & kADasi. samava & kADasidedxVshavxrana viVrasheYva SaTasxthXla & kADasidedhxVshavxra & kananxDa matutx saMsakxqqti\\
+24. & kADasi.  & kADasidedxVshavxrana viVrasheYva SaTasxthXla & kADasidedhxVshavxra & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-25. & kuSaTxgi. samava & kuSaTxgi paribasaveVshavxrana & kuSaTxgi karibasaveVshavxra & kananxDa matutx saMsakxqqti\\
+25. & kuSaTxgi.  & kuSaTxgi paribasaveVshavxrana & kuSaTxgi karibasaveVshavxra & kananxDa matutx saMsakxqqti\\
    &                  &  citatxsadagxtiya vacana           &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 26. & kUDasavx & kUDalUru basavaliMga sharaNara & kUDalUru basavaliMga sharaNa & viVrasheYva adhayxnana saMsethx, gadaga.\\
    & & savxravacanagaLu &&\\
-27. & keVshirA. & koMDaguLi keVshirAja & & \\[4pt]
-28. & keYvaTiV. & keYvalayxsArada TiVku & toVMTadAyaR & hasatxparxti Ori i. meYsUru.\\[4pt]
+27. & keVshirA. & koMDaguLi keVshirAja & & \\[5pt]
+28. & keYvaTiV. & keYvalayxsArada TiVku & toVMTadAyaR & hasatxparxti Ori i. meYsUru.\\[3pt]
 29. & keYvapa. & keYvalayxpadadhxti & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 30. & keYvasha. & keYvalayxsoVpAnanAmeYkoVtatxrashatasathxla & imamxDimuruGAgurusidadhx  & malenADa viVrasheYva adhayxyana\\
-    & & & sAvxmigaLu & saMsethx, shivamogagx.\\[4pt]
-31. & koVlashAM. samava & koVlashAMtayayxgaLa vacana & koVlashAMtayayx & kananxDa matutx saMsakxqqti\\
-   &              &                               &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
-32. & gajeVsha. samava & gajeVshamasaNayayxna vacana & gajeVsha masaNayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                          &                     & nideRVshanAlaya, beMgaLUru.\\[4pt]
+    & & & sAvxmigaLu & saMsethx, shivamogagx.\\[5pt]
+31. & koVlashAM.  & koVlashAMtayayxgaLa vacana & koVlashAMtayayx & kananxDa matutx saMsakxqqti\\
+   &              &                               &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+32. & gajeVsha.  & gajeVshamasaNayayxna vacana & gajeVsha masaNayayx & kananxDa matutx saMsakxqqti\\
+   &                  &                          &                     & nideRVshanAlaya, beMgaLUru.\\[5pt]
 33. & gaNaBA. & gaNaBASitaratanxmAle & gubibxmalalxNaNx & shirxV ma.ni.parx.\ maqtuyxMjaya \\
    &                  &                                    &                         & sAvxmigaLu, muruGAmaTha,\\
- &&&& dhAravADa.\\[4pt]
-34. & gupatxmaM. samava & gupatxmaMcaNaNxna vacana & gupatxmaMcaNaNx & kananxDa matutx saMsakxqqti\\
-   &                  &                      &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+ &&&& dhAravADa.\\[5pt]
+34. & gupatxmaM.  & gupatxmaMcaNaNxna vacana & gupatxmaMcaNaNx & kananxDa matutx saMsakxqqti\\
+   &                  &                      &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 35. & gurucA. & gururAjacAritarx & sidadhxnaMjeVsha & shirxVbAlaliVlA mahAMta\\
-    & & & & shivayoVgiVshavxra\\[4pt]
-36. & guru si.\ samava & gurusidedhxVvara vacana & gurusidadhxdeVvaru & kananxDa matutx saMsakxqqti\\
+    & & & & shivayoVgiVshavxra\\[5pt]
+36. & gurusi. & gurusidedhxVvara vacana & gurusidadhxdeVvaru & kananxDa matutx saMsakxqqti\\
     &&&& garxMthamAle, dhAravADa.\\
-    &&&& nideRVshanAlaya, beMgaLUru.\\[4pt]
-37. & goVrakaSx, savama & goVrakaSxna vacana & goVrakaSx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+    &&&& nideRVshanAlaya, beMgaLUru.\\[5pt]
+37. & goVrakaSx & goVrakaSxna vacana & goVrakaSx & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
 38. & GaTiTxvA. vacana & GaTiTxvALayayxna vacana & GaTiTxvALayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                           &                    & nideRVshanAlaya, beMgaLUru.\\[3pt]
-39. & GanaliM. samava & GanaliMgideVvara vacanagaLu & GanaliMgideVvaru & kananxDa matutx saMsakxqqti\\
-   &                  &                           &                   & nideRVshanAlaya, beMgaLUru.\\[3pt]
-40. & caMdima. samava & caMdimarasana vacana & caMdimarasa & kananxDa matutx saMsakxqqti\\
-   &                  &                        &                         & nideRVshanAlaya, beMgaLUru.\\[3pt]
+   &                  &                           &                    & nideRVshanAlaya, beMgaLUru.\\[6pt]
+39. & GanaliM.  & GanaliMgideVvara vacanagaLu & GanaliMgideVvaru & kananxDa matutx saMsakxqqti\\
+   &                  &                           &                   & nideRVshanAlaya, beMgaLUru.\\[6pt]
+40. & caMdima.  & caMdimarasana vacana & caMdimarasa & kananxDa matutx saMsakxqqti\\
+   &                  &                        &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
 41. & cananxba. ka & cananxbasavaNaNxnavara vacanagaLu & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx, kanARTaka\\
- & & & & vishavxvidAyxlaya, dhAravADa.\\[3pt]
-42. & cenanxba. samava & cenanxbasavaNaNxnavara vacanasaMpuTa & cenanxbasavaNaNxnavaru & kananxDa matutx saMsakxqqti\\
-   &                  &                             &                         & nideRVshanAlaya, beMgaLUru.\\[3pt]
+ & & & & vishavxvidAyxlaya, dhAravADa.\\[6pt]
+42. & cenanxba.  & cenanxbasavaNaNxnavara vacanasaMpuTa & cenanxbasavaNaNxnavaru & kananxDa matutx saMsakxqqti\\
+   &                  &                             &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
 43. & cenanxsotxV. & cenanxbasaveVshavxradeVvara  & saMpAdaneya  & viVrasheYva adhayxyana saMsethx, gadaga.\\
- & & sotxVtarxda vacanagaLu & sidadhxviVraNoNxDeyara saMkalana & \\[3pt]
+ & & sotxVtarxda vacanagaLu & sidadhxviVraNoNxDeyara saMkalana & \\[6pt]
 44. & cebapu. & cenanxbasavapurANa & virUpAkaSxpaMDita & liMgAyatavidAyxBivaqdidhx saMsethxya\\
 &&&& vAknamxyashAKe, dhAravADa.\\[3pt]
-45. & cwDayayx. samava & bahurUpi cwDayayxna vacana & bahurUpi cwDayayx & kananxDa matutx saMsakxqqti\\
+45. & cwDayayx.  & bahurUpi cwDayayxna vacana & bahurUpi cwDayayx & kananxDa matutx saMsakxqqti\\
    &                  &                             &                      & nideRVshanAlaya, beMgaLUru.\\[3pt]
-46. & jakakxNa. samava & jakakxNaNxyayxna nirALamaMtarxgoVpayx & jakakxNaNxyayx & kananxDa matutx saMsakxqqti\\
+46. & jakakxNa.  & jakakxNaNxyayxna nirALamaMtarxgoVpayx & jakakxNaNxyayx & kananxDa matutx saMsakxqqti\\
    &                  &                   &                         & nideRVshanAlaya, beMgaLUru.\\[3pt]
-47. & jeVDadA. samava & jeVDara dAsimayayxna vacana & jeVDara dAsimayayx & kananxDa matutx saMsakxqqti\\
+47. & jeVDadA.  & jeVDara dAsimayayxna vacana & jeVDara dAsimayayx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                & nideRVshanAlaya, beMgaLUru.\\[3pt]
-48. & tu\char'273\char'304rA. samava & tu\char'273\char'304gAhi rAmaNaNxna vacana & tu\char'273\char'304gAhi rAmaNaNx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                & nideRVshanAlaya, beMgaLUru.\\[3pt]
-49. & toVMTasi. samava & toVMTada sidadhxliMgashivayoVgigaLa  & toVMTada sidadhxliMga shivayoVgi & kananxDa matutx saMsakxqqti\\
-   &                  & vacanagaLu                         &                   & nideRVshanAlaya, beMgaLUru.\\[3pt]
+48. & tururA. & turugAhi rAmaNaNxna vacana & tu\char'273\char'304gAhi rAmaNaNx & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                & nideRVshanAlaya, beMgaLUru.\\[5pt]
+49. & toVMTasi. & toVMTada sidadhxliMgashivayoVgigaLa  & toVMTada sidadhxliMga shivayoVgi & kananxDa matutx saMsakxqqti\\
+   &                  & vacanagaLu                         &                   & nideRVshanAlaya, beMgaLUru.\\[5pt]
 50. & tirxpuvi. & tirxSaSiTx purAtanaviLAsaM & suraMga & vAgedxVviVvilAsa\\
-&&&& mudArxlaya, dAvaNagere.\\[3pt]
-51. & diVkASxboV. & diVkASxboVdhe & kereya padamxrasa & kanARTaka vishavxvidAyxlaya, dhAravADa.\\[4pt]
-52. & deVshikeVM. samava & deVshikeVMdarxsaMgana basavayayxna  & deVshikeVMdarxsaMgana basavayayx & kananxDa matutx saMsakxqqti\\
- & & SaTasxthXla vacana && nideRVshanAlaya, beMgaLUru.\\[4pt]
-53. & nAgalAM. samava & nAgalAMbikeya vacanagaLu & nAgalAMbike & kananxDa matutx saMsakxqqti\\
-   &                  &                          &                     & nideRVshanAlaya, beMgaLUru.\\[4pt]
-54. & niVlamamx. samava & niVlamamxna vacanagaLu & niVlamamx & kananxDa matutx saMsakxqqti\\
-   &                  &                          &                        & nideRVshanAlaya, beMgaLUru.\\[4pt]
+&&&& mudArxlaya, dAvaNagere.\\[5pt]
+51. & diVkASxboV. & diVkASxboVdhe & kereya padamxrasa & kanARTaka vishavxvidAyxlaya, dhAravADa.\\[5pt]
+52. & deVshikeVM. & deVshikeVMdarxsaMgana basavayayxna  & deVshikeVMdarxsaMgana basavayayx & kananxDa matutx saMsakxqqti\\
+ & & SaTasxthXla vacana && nideRVshanAlaya, beMgaLUru.\\[5pt]
+53. & nAgalAM. & nAgalAMbikeya vacanagaLu & nAgalAMbike & kananxDa matutx saMsakxqqti\\
+   &                  &                          &                     & nideRVshanAlaya, beMgaLUru.\\[5pt]
+54. & niVlamamx. & niVlamamxna vacanagaLu & niVlamamx & kananxDa matutx saMsakxqqti\\
+   &                  &                          &                        & nideRVshanAlaya, beMgaLUru.\\[5pt]
 55. & nUpura. &  nUtana purAtanara ragaLegaLu & harihara & kananxDa adhayxyanapiVTha,\\
-    &&&& dhAravADa.\\[4pt]
+    &&&& dhAravADa.\\[5pt]
 56. & padagoV   & padamaMtrxgoVpayx & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx, kanARTaka\\
   & (cananxbasavaNaNxnavara &  & vishavxvidAyxlaya, dhAravADa.\\
- & vacanagaLu, ka.\ vishavxvidAyxlaya) &&&\\[4pt]
+ & vacanagaLu, ka.\ vishavxvidAyxlaya) &&&\\[5pt]
 57. & parate. & paramAthaRgiVte & nijaguNa shivayovgi & kananxDa matutx saMsakxqqti\\
-   &                  &                              &                      & nideRVshanAlaya, beMgaLUru.\\[4pt]
+   &                  &                              &                      & nideRVshanAlaya, beMgaLUru.\\[5pt]
 58. & paramA. & paramAnuBavaboVdhe & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti\\
-   &                  &                         &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
+   &                  &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 59. & pArake. & pAramAthaRparxkAshike & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti\\
    &                  &                         &                         & nideRVshanAlaya, beMgaLUru.\\[4pt]
 60. & purAta. & purAtanara tirxvidhi & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti\\
@@ -209,7 +210,7 @@ hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
 61. & parxtiSAThx. & parxtiSAThxkalapxTiVke & vAdikumudacaMdarx & Ori{i}. meYsUru.\\[4pt]
 62. & parxBuliV. & parxBuliMgaliVle & cAmarasa & kananxDa adhayxyana piVTha, dhAravADa.\\[4pt]
 63. & parxBuva. & parxBudeVvara vacanagaLu & parxBudeVva (saM.Pa.gu. haLakaTiTx) & shivAnuBava garxMthamAlA, bijApura.\\[4pt]
-64. & parxBoVga, samava. & parxsAdi BoVgaNaNxna vacana &  parxsAdi BoVgaNaNx & kananxDa matutx saMsakxqqti\\
+64. & parxsABoV. & parxsAdi BoVgaNaNxna vacana &  parxsAdi BoVgaNaNx & kananxDa matutx saMsakxqqti\\
    &                  &                               &                       & nideRVshanAlaya, beMgaLUru.\\[4pt]
 65. & pwrxDharA. & pwrxDharAyana kAvayx & adaqshayxkavi & kanARTaka bukfDipo, baLALxri.\\[5pt]
 66. & basaTiV. {\rm I, II} & basavaNaNxnavara TiVkina vacanagaLu & eM.eM. kalabugiR &  kananxDa adhayxyana piVTha,\\
@@ -217,113 +218,113 @@ hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
 67. & basapu. & basava purANa & BiVmakavi & liMgAyata vidAyxBivaqdidhx\\
 &&&& saMsethx, dhAravADa.\\[4pt]
 68. & basava. ka. & basavaNaNxnavara vacanagaLu & basavaNaNxnavaru & kanARTaka vishavxvidAyxlaya, dhAravADa.\\[4pt]
-69. & basava. samava. & basavaNaNxnavara vacana saMpuTa & basavaNaNxnavaru & kananxDa matutx saMsakxqqti\\
+69. & basava. & basavaNaNxnavara vacana saMpuTa & basavaNaNxnavaru & kananxDa matutx saMsakxqqti\\
    &                  &                                 &                    & nideRVshanAlaya, beMgaLUru.\\[4pt]
-70. & bAlasaM. samava. & bAlasaMgayayxna sakalAgama shiKAmaNi & bAlasaMgayayx & kananxDa matutx saMsakxqqti\\
+70. & bAlasaM. & bAlasaMgayayxna sakalAgama shiKAmaNi & bAlasaMgayayx & kananxDa matutx saMsakxqqti\\
    &                  &                                 &                    & nideRVshanAlaya, beMgaLUru.\\[4pt]
-71. & bibibxbA. samava. & bibibxbAcayayxna vacana & bibibxbAcayayx & kananxDa matutx saMsakxqqti\\
+71. & bibibxbA. & bibibxbAcayayxna vacana & bibibxbAcayayx & kananxDa matutx saMsakxqqti\\
    &                  &                                 &                    & nideRVshanAlaya, beMgaLUru.\\[4pt]
 72. & BArada. & BAratiVya saMsakxqqti dashaRna & a.ana. kaqSaNxrAya  & sAhitayx matutx saMsakxqqti\\
 &&& (saMpAdakaru) & aBivaqdidhx ilAKe, beMgaLUru.\\[4pt]
 73. & BAvaciM. & BAvaciMtAratanxM & gubibxmalalxNAyaR & kanARTaka kAvayxkalAnidhi, meYsUru.\\[4pt]
-74. & maMcaNaNx, samava. & rAyasada maMcaNaNxgaLa vacana & rAyasada maMcaNaNx & kananxDa matutx saMsakxqqti\\
+74. & maMcaNaNx, . & rAyasada maMcaNaNxgaLa vacana & rAyasada maMcaNaNx & kananxDa matutx saMsakxqqti\\
    &                  &                               &                     & nideRVshanAlaya, beMgaLUru.\\[4pt]
-75. & maDimA. samava. & maDivALa mAcideVvara vacana & maDivALa mAcideVva & kananxDa matutx saMsakxqqti\\
+75. & maDimA.  & maDivALa mAcideVvara vacana & maDivALa mAcideVva & kananxDa matutx saMsakxqqti\\
    &                  &                               &                        & nideRVshanAlaya, beMgaLUru.\\[4pt]
-76. & maDivA. samava. & maDivALapapxna nijaliVlAmaqta vacana & maDivALapapx & kananxDa matutx saMsakxqqti\\
+76. & maDivA.  & maDivALapapxna nijaliVlAmaqta vacana & maDivALapapx & kananxDa matutx saMsakxqqti\\
    &                  &                               &                       & nideRVshanAlaya, beMgaLUru.\\[4pt]
-77. & madeVvi. samava & moVLige mahAdeVviya vacanagaLu & moVLige mahAdeVvi & kananxDa matutx saMsakxqqti\\
+77. & moVLima. & moVLige mahAdeVviya vacanagaLu & moVLige mahAdeVvi & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
 78. & manoVvi. & manoVvijaya & gurubasava & guruvilAsa pirxMTiMgf vakfsxR,\\
     &&&& beMgaLUru.\\[7pt]
-79. & mahAdeV. samava. & mahAdeVviVrayayxna vacana & mahAdeVviVrayayx & kananxDa matutx saMsakxqqti\\
+79. & mahAdeV. & mahAdeVviVrayayxna vacana & mahAdeVviVrayayx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
-80. & mAyaNaNx. samava. & joVdara mAyaNaNxna vacana & joVdara mAyaNaNx & kananxDa matutx saMsakxqqti\\
+80. & joVdama. & joVdara mAyaNaNxna vacana & joVdara mAyaNaNx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
-81. & mArayayx. samava & Ayadxkikx mArayayxgaLa vacana & Ayadxkikx mArayayx & kananxDa matutx saMsakxqqti\\
+81. & mArayayx. & Ayadxkikx mArayayxgaLa vacana & Ayadxkikx mArayayx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
-82. & mAritaM. samava & a\char'273\char'311vina mAritaMdegaLa vacana & a\char'273\char'311vina mAritaMde & kananxDa matutx saMsakxqqti\\
+82. & arimA. & arivina mAritaMdegaLa vacana & arivina mAritaMde & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
 83. & mishArxpaRNa & mishArxpaRNa & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx,\\
     & (cananxbasavaNaNxnavara vacanagaLu, & & & dhAravADa.\\
     & kanARTaka vishavxvidAyxlaya) &&&\\[7pt]
-84. & mumamxDi. samava & mumamxDi kAyeRVMdarxna & mumamxDi kAyeRVMdarx & kananxDa matutx saMsakxqqti\\
-    & veVdasaMjiVvini & & nideRVshanAlaya, beMgaLUru.\\[7pt]
-85. & moVLige. samava & moVLige mArayayxna vacana & moVLige mArayayx & kananxDa matutx saMsakxqqti\\
+84. & mumamxkA. & mumamxDi kAyeRVMdarxna & mumamxDi kAyeRVMdarx & kananxDa matutx saMsakxqqti\\
+    & veVdasaMjiVvini & && nideRVshanAlaya, beMgaLUru.\\[7pt]
+85. & moVLige. & moVLige mArayayxna vacana & moVLige mArayayx & kananxDa matutx saMsakxqqti\\
     & & & & nideRVshanAlaya, beMgaLUru.\\[7pt]
 86. & rAjareV. & rAjasheVKara viLAsaM & SaDakaSxradeVva & bi.e.\ koVdaMDarAma bukf\\
     &&&& Dipo, meYsUru.\\[7pt]
-87. & rAyamamx. samava & amuge rAyamamxna vacanagaLu & amuge rAyamamx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
-88. & liMgamamx. samava & haDapadapapxNaNx puNayxsitxrXV liMgamamxna & liMgamamx & kananxDa matutx saMsakxqqti\\
-   &                  &  boVdheya vacanagaLu      &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
-89. & liMgaliV. & liMgaliVlAvilAsa cAritarx & kalalxmaThada parxBudeVvaru & muruGAmaTha, dhAravADa.\\[6pt]
-90. & vacana. samava & vacanapariBASAkoVsha & esf. vidAyxsaMkara & kananxDa matutx saMsakxqqti\\
-   &                  &                     & (saMpAdakaru)      & nideRVshanAlaya, beMgaLUru.\\[6pt]
+87. & amurA. & amuge rAyamamxna vacanagaLu & amuge rAyamamx & kananxDa matutx saMsakxqqti\\
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+88. & liMgamamx. & haDapadapapxNaNx puNayxsitxrXV liMgamamxna & liMgamamx & kananxDa matutx saMsakxqqti\\
+   &                  &  boVdheya vacanagaLu      &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+89. & liMgaliV. & liMgaliVlAvilAsa cAritarx & kalalxmaThada parxBudeVvaru & muruGAmaTha, dhAravADa.\\[5pt]
+90. & va.pA.koV. & vacanapariBASAkoVsha & esf. vidAyxsaMkara & kananxDa matutx saMsakxqqti\\
+   &                  &                     & (saMpAdakaru)      & nideRVshanAlaya, beMgaLUru.\\[5pt]
 91. & vacara. & vacanashAsatxrXrahasayx & raM.rA.\ divAkara & adhAyxtamx kAyARlaya,\\
-    &&&& hubabxLiLx.\\[6pt]
+    &&&& hubabxLiLx.\\[5pt]
 92. & vacashA. & vacanashAsatxrXsAra & Pa.gu.\ haLakaTiTx & shivAnuBava garxMthamAlA,\\
-   &                  &                                    & (saMpAdakaru)  & vijApura.\\[6pt]
+   &                  &                                    & (saMpAdakaru)  & vijApura.\\[5pt]
 93. & viveVka. & viveVkaciMtAmaNi & nijaguNa shivayoVgi & shirxV jagadugxru gaMgAdhara dhamaR\\
     &&&& parxcAraka maMDala,\\
-    &&&& mUrusAviramaTha, hubabxLiLx.\\[6pt]
+    &&&& mUrusAviramaTha, hubabxLiLx.\\[5pt]
 94. & viVsheYpu. & viVrasheYvAmaqtapurANa & gubibxmalalxNAyaR & enf.esf.esf.\ kalAyxNakeVMdarx,\\
-    &&&& beLagAvi.\\[6pt]
-95{\rm a}. & veYdayxsaM. samava & veYdayxsaMgaNaNxna vacana & veYdayxsaMgaNaNx & kananxDa matutx saMsakxqqti\\
-   &               &                           &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
+    &&&& beLagAvi.\\[5pt]
+95{\rm a}. & veYdayxsaM. & veYdayxsaMgaNaNxna vacana & veYdayxsaMgaNaNx & kananxDa matutx saMsakxqqti\\
+   &               &                           &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 95. & shakitxvi. & shakitxvishiSAThxdevxYtaveVdAMta & Ti.ji.\ sidadhxpApxrAdhayx & meYsUru vishavxvidAyxnilaya,\\
-    &&&& meYsUru.\\[6pt]
+    &&&& meYsUru.\\[5pt]
 96. & shabashaM. & shabarashaMkaraviLAsaM & SaDakaSxradeVva & liMgAyata vidAyxBivaqdidhx saMsethx,\\
-    &&&& dhAravADa.\\[6pt]
+    &&&& dhAravADa.\\[5pt]
 97. & sharaca. & sharaNacaritAmaqta & sidadhxyayxpurANika & vayasakxra shikaSxNasamiti,\\
     &&&& meYsUru.\\[6pt]
 98. & sharasA. & sharaNa sAhitayx (mAsapatirxke) & bi.\ shivamUtiRshAsitxrXV & savxtaMtarx kaNARTaka perxsf,\\
-    &&& (saMpAdakaru) & beMgaLUru.\\[5pt]
+    &&& (saMpAdakaru) & beMgaLUru.\\[6pt]
 99. & shAMtara. & vacana BaMDAri shAMtarasana vacana & shAMtarasa & kananxDa matutx saMsakxqqti\\
-   &               &                                 &                     & nideRVshanAlaya, beMgaLUru.\\[5pt]
-100. & shivaciM. & shivatatatxvX ciMtAmaNi & lakakxNaNx daMDeVsha & Ori{i}, meYsUru.\\[5pt]
-101. & shivamaM. samava & shivaleMka maMcaNaNxna vacana & shivaleMka maMcaNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+   &               &                                 &                     & nideRVshanAlaya, beMgaLUru.\\[6pt]
+100. & shivaciM. & shivatatatxvX ciMtAmaNi & lakakxNaNx daMDeVsha & Ori{i}, meYsUru.\\[6pt]
+101. & shivaleM. & shivaleMka maMcaNaNxna vacana & shivaleMka maMcaNaNx & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
 102. & shivAkoV. & shivAnuBava shabadxkoVsha & Pa.gu.\ haLakaTiTx & samAja pusatxkAlaya,\\
- &&&& dhAravADa.\\[5pt]
-103. & shivAsU. & shivAnuBavasUtarxM & magegxya mAyideVva & \\[5pt]
-104. & shUnayxku. & shUnayxsaMpAdaneyanunx kuritu & eM.\ cidAnaMdamUtiR & moVhana parxkAshana, meYsUru.\\[5pt]
-105. & shUnayxmaM. samava & shUnayxmaMtarxgoVpayx & imamxDi gurusidadhxsAvxmigaLu & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+ &&&& dhAravADa.\\[6pt]
+103. & shivAsU. & shivAnuBavasUtarxM & magegxya mAyideVva & \\[6pt]
+104. & shUnayxku. & shUnayxsaMpAdaneyanunx kuritu & eM.\ cidAnaMdamUtiR & moVhana parxkAshana, meYsUru.\\[6pt]
+105. & shUnayxmaM. & shUnayxmaMtarxgoVpayx & imamxDi gurusidadhxsAvxmigaLu & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
 106. & SabarxsaM. va & SaTasxthXlabarxhAmxnaMda virakatxcAritarx & esf.\ umApati & viVrasheYva adhayxyana saMsethx, gadaga.\\
-    & saMpAdaneya vacanagaLu & (saMpAdakaru) & \\[5pt]
-107. & saMgaNaNx. savama & dAsoVhada saMgaNaNxna vacana & dAsoVhada saMgaNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-108. & saMgayayx, samava & BikaSxda saMgayayxna vacana & saMgayayx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-109. & sakamA. samava & sakaLeVsha mAdarasana vacana & mAdarasa & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
-110. & sakiVla (cananxbasavaNaNx & toMbatAtx\char'273\char'304\ sakiVlagaLu & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx,\\
+    & saMpAdaneya vacanagaLu & (saMpAdakaru) & \\[6pt]
+107. & dAsoVhaM.  & dAsoVhada saMgaNaNxna vacana & dAsoVhada saMgaNaNx & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
+108. & BikaSxsaM. & BikaSxda saMgayayxna vacana & saMgayayx & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
+109. & sakaLeV. & sakaLeVsha mAdarasana vacana & mAdarasa & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[6pt]
+110. & sakiVla (cananxbasavaNaNx & toMbatAtxru\ sakiVlagaLu & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx,\\
      & -navara vacanagaLu, & & & dhAravADa.\\
      & kanARTaka vishavxvidAyxlaya) &&&\\[5pt]
-111. & sagabo. samava & sagarada bomamxNaNxna vacana & bomamxNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
+111. & sagabo. & sagarada bomamxNaNxna vacana & bomamxNaNx & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 112. & savaRjacnx & savaRjacnxna vacanagaLu & savaRjacnx & ke.i.\ mishanf heYsUkxlf,\\
-     &&&& dhAravADa.\\[7pt]
+     &&&& dhAravADa.\\[5pt]
 113. & savaRva. & savaRpurAtanara vacana & cananxmalilxkAjuRna & sadadhxmaRdiVpike garxMthamAlA,\\
-     & & & (saMpAdakaru) & meYrUru.\\[7pt]
-114. & sAnaMca. & sAnaMda cariterx & kumAra padamxrasa & Ori{i}, meYsUru.\\[7pt]
+     & & & (saMpAdakaru) & meYrUru.\\[5pt]
+114. & sAnaMca. & sAnaMda cariterx & kumAra padamxrasa & Ori{i}, meYsUru.\\[5pt]
 115. & sidadhxrA. ka. & shirxV sidadhxrAmeVshavxra vacanagaLu & Arf.si.\ hireVmaTha & kanARTaka vishavxvidAyxlaya,\\
-     &&& (saMpAdakaru) & dhAravADa.\\[7pt]
-116. & sidadhxrA. samava. & sidadhxrAmeVshavxra vacanasaMpuTa & sidadhxrAmeVshavxra & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
+     &&& (saMpAdakaru) & dhAravADa.\\[5pt]
+116. & sidadhxrA.  & sidadhxrAmeVshavxra vacanasaMpuTa & sidadhxrAmeVshavxra & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 117. & sidedhxVva. & sidedhxVshavxra vacana & sidadhxliMgasAvxmi & shivaliMgavijaya mudArxlaya,\\
-    &&&& hAveVri.\\[7pt]
-118. & soDaDxLa. samava & soDaDxLa bAcarasana vacana & bAcarasa & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
-119. & soVmaNaNx. samava & koTArada soVmaNaNxna vacana & koTArada soVmaNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
+    &&&& hAveVri.\\[5pt]
+118. & soDaDxbA. & soDaDxLa bAcarasana vacana & bAcarasa & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+119. & soVmaNaNx. & koTArada soVmaNaNxna vacana & koTArada soVmaNaNx & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 120. & savxrUpa. & savxrUpasididhxTiVke & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
-121. & savxsidadhx. & savxtaMtarx sidadhxliMgeVshavxrara vacanagaLu & savxtaMtarx sidadhxliMgeVshavxraru & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[7pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
+121. & savxtaMtarx. & savxtaMtarx sidadhxliMgeVshavxrara vacanagaLu & savxtaMtarx sidadhxliMgeVshavxraru & kananxDa matutx saMsakxqqti\\
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru.\\[5pt]
 122. & hiMdasA. & hiMdU dashaRnasAra & lakiSxmXpuraM shirxVnivAsAcAyaR & meYsUru vishavxvidAyxnilaya,\\
-     &&&& meYsUru.\\[7pt]
+     &&&& meYsUru.\\[5pt]
 123. & hirimaM. & hiriya maMtarxgoVpayx & cananxbasavaNaNxnavaru & kananxDa adhayxyanasaMsethx,\\
      & (cananxbasavaNaNxnavara &&&\\
      & vacanagaLu, kanARTaka &&&\\
