--- a/mainfile.tex
+++ b/mainfile.tex
@@ -23,11 +23,11 @@
 
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
+%\input tex-for-print/jss-001-281.tex
 \input tex-for-print/jss-282-501.tex
-%\input tex-for-print/jss_consolidated1
-%\newpage
-%\input tex-for-print/anubandha-1.tex
+\newpage
+\input tex-for-print/anubandha-1.tex
 \end{multicols}
-%\newpage
-%\input tex-for-print/anubandha-2.tex
+\newpage
+\input tex-for-print/anubandha-2.tex
 \end{document}
